# neo-activemq-cpp

./: .env  .gitignore  CMakeLists.txt  docker-compose.yml  neoactivemq-cpp-config.cmake  vcpkg-configuration.json  vcpkg.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  linux.yml  release.yml  windows.yml
activemq-cpp/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
activemq-cpp/.github/: copilot-instructions.md
activemq-cpp/cmake/presets/: base.json  linux.json  windows.json
activemq-cpp/src/examples/: CMakeLists.txt  main.cpp
activemq-cpp/src/examples/advisories/: AdvisoryConsumerMain.cpp  AdvisoryProducerMain.cpp  TempDestinationAdvisoryConsumerMain.cpp  TempDestinationAdvisoryProducerMain.cpp
activemq-cpp/src/examples/producers/: SimpleProducer.cpp
activemq-cpp/src/examples/topics/chat/: Chat.cpp
activemq-cpp/src/main/activemq/: CMakeLists.txt
activemq-cpp/src/main/activemq/core/: ActiveMQMessageAudit.cpp
activemq-cpp/src/main/activemq/threads/: CompositeTaskRunner.cpp  DedicatedTaskRunner.cpp  DedicatedTaskRunner.h
activemq-cpp/src/main/activemq/transport/: IOTransport.cpp  TransportFilter.h
activemq-cpp/src/main/activemq/transport/failover/: FailoverTransport.cpp
activemq-cpp/src/main/activemq/transport/mock/: InternalCommandListener.cpp
activemq-cpp/src/main/activemq/transport/tcp/: SslTransport.cpp  SslTransport.h  TcpTransport.cpp  TcpTransportFactory.cpp
activemq-cpp/src/main/cms/: CMakeLists.txt
activemq-cpp/src/main/decaf/: CMakeLists.txt
activemq-cpp/src/main/decaf/internal/net/ssl/openssl/: OpenSSLContextSpi.cpp
activemq-cpp/src/main/decaf/internal/net/tcp/: TcpSocket.cpp
activemq-cpp/src/main/decaf/internal/util/concurrent/: Atomics.cpp  CustomReentrantLock.h  PlatformDefs.h  PlatformThread.cpp  Threading.cpp  ThreadingTypes.h
activemq-cpp/src/main/decaf/io/: DataInputStream.cpp
activemq-cpp/src/main/decaf/util/concurrent/: Mutex.cpp
activemq-cpp/src/test/: CMakeLists.txt  main.cpp  testRegistry.cpp
activemq-cpp/src/test-benchmarks/: CMakeLists.txt
activemq-cpp/src/test-integration/: CMakeLists.txt
activemq-cpp/src/test-integration/activemq/test/: AsyncSenderTest.cpp  DurableTest.cpp  ExpirationTest.cpp  JmsMessageGroupsTest.cpp  MapMessageTest.cpp  MessageCompressionTest.cpp  SimpleRollbackTest.cpp  SimpleTest.cpp  SlowListenerTest.cpp  TransactionTest.cpp  VirtualTopicTest.cpp
activemq-cpp/src/test-integration/activemq/test/openwire/: OpenwireAdvisoryTest.cpp  OpenwireAsyncSenderTest.cpp  OpenwireSimpleTest.cpp  OpenwireTempDestinationTest.cpp  OpenwireXATransactionsTest.cpp
activemq-cpp/src/test/activemq/core/: ActiveMQConnectionFactoryTest.cpp
activemq-cpp/src/test/activemq/mock/: MockBrokerService.cpp
activemq-cpp/src/test/activemq/transport/failover/: FailoverTransportTest.cpp  FailoverTransportTest.h
activemq-cpp/src/test/activemq/transport/tcp/: SslTransportTest.cpp  SslTransportTest.h  TcpTransportTest.cpp
activemq-cpp/src/test/decaf/internal/net/ssl/openssl/: OpenSSLSocketTest.cpp  OpenSSLSocketTest.h
cmake/presets/: base.json
